<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginFragment">

    <data>

        <variable
            name="loginFragment"
            type="com.example.capstoneproject.fragment.LoginFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background1"
        android:padding="20dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/robotoslab_extrabold"
            android:text="@string/tv_title"
            android:textColor="@color/white"
            android:textSize="27sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvUsernameOrEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/tv_username_or_email"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/ic_username"
            android:elevation="10dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/tvUsernameOrEmail"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
            tools:layout_editor_absoluteX="30dp" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/tv_password"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etUsername" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/ic_lock"
            android:drawableEnd="@drawable/ic_eye"
            android:elevation="10dp"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/tvPassword"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
            tools:layout_editor_absoluteX="30dp" />

        <TextView
            android:id="@+id/tvPasswordRule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/tv_password_rule"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPassword" />

        <TextView
            android:id="@+id/tvLupaPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_semibold"
            android:onClick="@{ () -> loginFragment.toLupaPassword()}"
            android:text="@string/tv_lupa_password"
            android:textColor="@color/cyan_color"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPasswordRule" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_round"
            android:backgroundTint="@color/blue_eight"
            android:fontFamily="@font/montserrat_semibold"
            android:onClick="@{() -> loginFragment.login()}"
            android:text="@string/btn_login"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/tvLupaPassword" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="35dp"
            android:indeterminateTint="@color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLupaPassword" />

        <TextView
            android:id="@+id/tvLoginDengan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/tv_login_dengan"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/ivX"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginEnd="15dp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/ivX"
            app:layout_constraintEnd_toStartOf="@+id/tvLoginDengan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="15dp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/ivX"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvLoginDengan"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        <ImageView
            android:id="@+id/ivGoogle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/google_content"
            android:onClick="@{ () -> loginFragment.googleSignIn() }"
            android:src="@drawable/ic_google"
            app:layout_constraintBottom_toTopOf="@+id/tvBelumPunyaAkun"
            app:layout_constraintEnd_toStartOf="@+id/ivX"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/ivX"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/x_content"
            android:onClick="@{ () -> loginFragment.twitterSignIn() }"
            android:src="@drawable/logo_x"
            app:layout_constraintBottom_toTopOf="@+id/tvBelumPunyaAkun"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivGoogle" />

        <TextView
            android:id="@+id/tvBelumPunyaAkun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/tv_belum_punya_akun"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvDaftar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:onClick="@{ () -> loginFragment.toSignup()}"
            android:text="@string/text_daftar"
            android:textColor="@color/cyan_color"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tvBelumPunyaAkun"
            app:layout_constraintStart_toEndOf="@id/tvBelumPunyaAkun" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>