<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_siap"
        android:textColor="@color/white"
        android:id="@+id/tvTitle"
        android:textSize="40sp"
        android:fontFamily="@font/montserrat_semibold"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnMulai"
        android:text="@string/tv_mulai"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_kuis_round1"
        android:padding="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintEnd_toStartOf="@id/btnKembali"/>

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnKembali"
        android:text="@string/tv_kembali"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_kuis_round2"
        android:padding="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toEndOf="@id/btnMulai"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:layout_width="10dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/btnMulai"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>